# defmt-rtt-target

./: Cargo.toml  README.md
example/: Cargo.toml
example/.cargo/: config
example/src/: main.rs
src/: lib.rs
