[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "defmt-rtt-target"
version = "0.4.0"
categories = [
    "embedded",
    "no-std",
]
description = "defmt logger implementation using the rtt-target crate"
repository = "https://github.com/akiles/defmt-rtt-target"

[dependencies]
defmt = "0.3.0"
rtt-target = "0.5.0"
critical-section = "1.1"
portable-atomic = { version = "1.6.0", default-features = false }
