[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "defmt-rtt-target-example"
version = "0.1.0"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
cortex-m        = { version = "0.6.3" }
cortex-m-rt = "0.6.12"
defmt = "0.1.0"
defmt-rtt-target = { path = ".." }
panic-probe = "0.1.0"
rtt-target = "0.2.2"

[patch.crates-io]
panic-probe = { git = "https://github.com/knurling-rs/probe-run", branch="main" }
defmt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
