[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "defmt-rtt-target-example"
version = "0.1.0"

[features]
default = [
 "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.0"
defmt-rtt-target = { path = ".." }
panic-probe = "0.3.0"
rtt-target = "0.5.0"

[patch.crates-io]
panic-probe = { git = "https://github.com/knurling-rs/probe-run", branch="main" }
defmt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
